create: Skills section

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -60,7 +60,7 @@
   .banner img {
     animation: updown 3s linear infinite;
   }
-  @keyframes updown {
+  /* @keyframes updown {
       0% {
           transform: translateY(-20px);
       }
@@ -70,7 +70,7 @@
       100% {
           transform: translateY(-20px);
       }
-  }
+  } */
   .txt-rotate > .wrap {
     border-right: 0.08em solid #666;
   }
