--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,10 +1,15 @@
 .banner {
     margin-top: 0;
-    padding: 260px 0 100px 0;
-    background-image: url('./assets/img/banner-bg.png');
+    padding: 220px 0 100px 0;
+    background-image: url('../../assets/img/banner-bg.png');
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
+  }
+  .flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .banner .tagline {
     font-weight: 700;
@@ -21,7 +26,7 @@
     font-weight: 700;
     letter-spacing: 0.8px;
     line-height: 1;
-    margin-bottom: 20px;
+
     display: block;
   }
   .banner p {
@@ -57,9 +62,35 @@
   .banner button:hover svg {
     margin-left: 25px;
   }
-  .banner img {
-    animation: updown 3s linear infinite;
+
+  @media (min-width: 768px) {
+    .banner img {
+      margin-top: -20px;
+      margin-left: 50px;
+      border-radius: 50%;
+      height: 350px;
+      width: 350px;
+    }
+
+    .banner h1 {
+      margin-bottom: 20px;
+    }
+
+    .banner button svg {
+      font-size: 30px;
+    }
   }
+
+  .banner img {
+    margin-top: 20px;
+    margin-left: -45px;
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+  }
+  /* .banner img {
+    animation: updown 3s linear infinite;
+  } */
   /* @keyframes updown {
       0% {
           transform: translateY(-20px);
