--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -45,6 +45,13 @@ nav.navbar {
       line-height: 1;
       border: 1px solid rgba(255, 255, 255, 0.5);
   }
+
+  @media screen and (max-width: 768px) {
+    .social-icon a {
+      width: 36px;
+      height: 36px;
+    }
+  }
   .social-icon a::before {
       content: "";
       width: 42px;
