--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,4 +1,4 @@
-    .skill {
+.skill {
     padding: 0 0 50px 0;
     position: relative;
   }
@@ -48,7 +48,7 @@
     position: absolute;
     top: 30px;
     left:40px;
-    padding: 10px 20px;
+    padding: 10px 10px;
     background-color: rgb(36, 35, 35);
     color: #fff;
     border: none;
@@ -92,22 +92,31 @@
 
 .list-skills ul {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(2, minmax(auto, 1fr));
     list-style-type: none;
     padding: 0;
     margin: 0;
     width: 100%;
 }
 
+
 .list-skills li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     font-size: 1.2em;
-    padding: 20px;
+    padding: 10px 0px;
 }
 
+@media (min-width: 768px) {
+    .list-skills ul {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .list-skills li {
+        padding: 20px;
+    }
+}
 .list-skills img {
     width: 60px;
     height: 60px;
