chore: Update AboutMe section, Projects component, and styles

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -140,7 +140,7 @@
   
   .experience-card .card-subtitle {
     font-size: 1.1rem;
-    color: #bbbbbb;
+    color: #9c7f7f;
   }
   
   .experience-card .card-text {
@@ -148,4 +148,3 @@
     font-size: 1rem;
     line-height: 1.5;
   }
-  
