--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,9 @@
 .footer {
-    padding: 0 0 50px 0;
-    background-image: url('./assets/img/footer-bg.png');
+    padding: 20px 0 20px 0;
+    background: linear-gradient(135deg, #1c1c3c, #2a2a58);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 30px;
   }
   .newsletter-bx {
     background: #FFFFFF;
