--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -78,11 +78,32 @@
   }
 
   .banner h1 {
+    font-size: 50px;
     margin-bottom: 20px;
   }
 
   .banner button svg {
     font-size: 30px;
+  }
+}
+
+/* ipad view */
+@media (max-width: 1120px) {
+  .banner img {
+    margin-top: 20px;
+    margin-left: -45px;
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+  }
+
+  .banner h1 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+
+  .txt-rotate > .wrap {
+    border-right: 0.08em solid #666;
   }
 }
 
