--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -62,6 +62,7 @@
 }
 
 .proj-imgbx img {
+  cursor: pointer;
   width: 100%;
   transition: transform 0.3s ease-in-out;
 }
@@ -91,12 +92,14 @@
   transform: translateY(-20px);
 }
 
-.proj-txtx h4 {
+.proj-txtx a {
+  display: inline-block;
   font-size: 24px;
   font-weight: 700;
   letter-spacing: 0.8px;
   color: #ffffff;
   margin-bottom: 10px;
+  transition: color 0.3s ease-in-out;
 }
 
 .proj-txtx span {
